brat/test/golden/imports/non-existent1.brat.golden
Error in non-existent1 on line 1:
import lib (x, a)
               ^

  Symbol `a` not found in `lib`

